biquad-filter slide

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
 <header>
-    <h1>Klangwerk</h1><h2>André Michelle</h2>
+    <h1>Klangwerk</h1><h2>Introduction</h2>
 </header>
 <article>
-    <h1>The Web-Audio-Api and The Web-Midi-Api</h1>
+    <h1>The Web Audio/Midi Api</h1>
     <h2>andre.michelle@gmail.com</h2>
     <h2>https://about.me/andremichelle</h2>
 </article>
