--- a/digital-audio.html
+++ b/digital-audio.html
@@ -15,7 +15,7 @@
 <header>
     <h1>Klangwerk</h1><h2>Digital Audio</h2>
 </header>
-<article>
+<article class="center">
     <ul class="list">
         <li>Digital audio is a sequence of numbers</li>
         <li>Quantised in terms of amplitude and time</li>
