--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
 <header>
     <h1>Klangwerk</h1><h2>Introduction</h2>
 </header>
-<article>
-    <h1>The Web Audio/Midi Api</h1>
-    <h2>andre.michelle@gmail.com</h2>
-    <h2>https://about.me/andremichelle</h2>
+<article class="center">
+    <div>
+        <h1>The Web Audio / Midi Api</h1>
+        <h2>andre.michelle@gmail.com</h2>
+        <h2>https://about.me/andremichelle</h2>
+    </div>
 </article>
 <footer></footer>
 </body>
