--- a/list-devices.html
+++ b/list-devices.html
@@ -65,9 +65,13 @@
     <h1>Klangwerk</h1>
     <h2>Enumerate Devices</h2>
 </header>
-<h3>Media</h3>
-<ul id="media-devices"></ul>
-<h3>Midi</h3>
-<ul id="midi-devices"></ul>
+<article class="center">
+    <div>
+        <h4>Media</h4>
+        <ul id="media-devices"></ul>
+        <h4>Midi</h4>
+        <ul id="midi-devices"></ul>
+    </div>
+</article>
 </body>
 </html>
