--- a/waa.html
+++ b/waa.html
@@ -15,18 +15,20 @@
 <header>
     <h1>Klangwerk</h1><h2>Web Audio Api</h2>
 </header>
-<article>
-    <h2>https://www.w3.org/TR/webaudio/</h2>
-    <ul class="list">
-        <li>Real-time audio rendering</li>
-        <li>Ready to use audio-graph with pre-built components</li>
-        <li>Running in its own thread</li>
-        <li>Extendable via AudioWorklets (NEW)</li>
-        <li>Ideal for game developers</li>
-        <li>Less suitable for music-applications</li>
-        <li>Weird API due to poor decisions</li>
-        <li>Still fun and amazingly easy for prototyping</li>
-    </ul>
+<article class="center">
+    <div>
+        <h2>https://www.w3.org/TR/webaudio/</h2>
+        <ul class="list">
+            <li>Real-time audio rendering</li>
+            <li>Ready to use audio-graph with pre-built components</li>
+            <li>Running in its own thread</li>
+            <li>Extendable via AudioWorklets (NEW)</li>
+            <li>Ideal for game developers</li>
+            <li>Less suitable for music-applications</li>
+            <li>Partly weird API</li>
+            <li>Still fun and amazingly easy for prototyping</li>
+        </ul>
+    </div>
 </article>
 <footer></footer>
 </body>
