--- a/wma.html
+++ b/wma.html
@@ -15,18 +15,20 @@
 <header>
     <h1>Klangwerk</h1><h2>Web Midi Api</h2>
 </header>
-<article>
-    <h2>https://www.w3.org/TR/webmidi/</h2>
-    <ul class="list">
-        <li>Connects midi-devices to your browser</li>
-        <li>Receives midi-messages</li>
-        <li>Sends midi-messages</li>
-        <li>Notes</li>
-        <li>Controller (Knobs, Sliders,...)</li>
-        <li>Modulation Wheel (controller.id = 0)</li>
-        <li>Pitch Wheel</li>
-        <li>SysEx</li>
-    </ul>
+<article class="center">
+    <div>
+        <h2>https://www.w3.org/TR/webmidi/</h2>
+        <ul class="list">
+            <li>Connects midi-devices to your browser</li>
+            <li>Receives midi-messages</li>
+            <li>Sends midi-messages</li>
+            <li>Notes</li>
+            <li>Controller (Knobs, Sliders,...)</li>
+            <li>Modulation Wheel (controller.id = 0)</li>
+            <li>Pitch Wheel</li>
+            <li>SysEx</li>
+        </ul>
+    </div>
 </article>
 <footer></footer>
 </body>
