Finetuning on slides

--- a/digital-audio.html
+++ b/digital-audio.html
@@ -23,6 +23,7 @@
         <li>Does not loose quality on repeating playback</li>
         <li>Synthesising a custom signal by code has a lot of pitfalls though</li>
         <li>Most difficult problem is to avoid aliasing</li>
+        <li>No frequency above half the sample-rate must be exposed</li>
     </ul>
 </article>
 <footer></footer>
