--- a/test.html
+++ b/test.html
@@ -13,8 +13,9 @@
         import {Harmonic} from "./worklets/PadSynth.js";
 
         const context = Policy.newAudioContext();
+        const sampleRate = context.sampleRate;
 
-        readAudio(context, "files/aaaa.wav").then(buffer => {
+        readAudio(context, "files/909/hihat-open.ogg").then(buffer => {
             const frames = buffer.getChannelData(0);
             const padSize = 1 << 18;
             const windowSize = 1 << 13;
@@ -32,9 +33,10 @@
                 }
                 imag.fill(0.0);
                 fft.process(real, imag);
-                for (let j = 0; j < windowSize / 2; j++) {
+                for (let j = 1; j < windowSize / 2; j++) {
                     // options: max or sum
                     sum[j] = Math.max(sum[j], Math.sqrt(real[j] * real[j] + imag[j] * imag[j]));
+                    // sum[j] += Math.sqrt(real[j] * real[j] + imag[j] * imag[j]);
                 }
             }
             normalise(sum);
@@ -54,18 +56,35 @@
             }
             // find max peak index for root overtone and start from there
             console.log("numBins", sum.length);
-            const harmonics = [];
-            for (let i = 1; i < sum.length; i++) {
-                const position = i / ratio;
-                harmonics.push(new Harmonic(position, sum[i], 0.01));
+            let maxIndex = 0, maxValue = 0.0;
+            for (let i = 0; i < windowSize / 2; i++) {
+                if (maxValue < sum[i]) {
+                    maxValue = sum[i];
+                    maxIndex = i;
+                }
             }
-            console.log(harmonics);
+            console.log("maxValue", maxValue);
+            const binRatio = maxIndex / windowSize;
+            const fundamentalFrequency = binRatio * sampleRate;
+            console.log("binRatio", binRatio);
+            console.log("fundamentalFrequency", fundamentalFrequency);
+            const harmonics = [];
+            if (false) {
+                for (let i = maxIndex; i < maxIndex + 128; i++) {
+                    const position = 1.0 + (i - maxIndex);
+                    harmonics.push(new Harmonic(position, sum[i], 0.07 * Math.pow(position, 1.1)));
+                }
+            } else {
+                for (let i = 1; i < sum.length; i++) {
+                    const position = i / ratio;
+                    harmonics.push(new Harmonic(position, sum[i], 0.01));
+                }
+            }
 
-            const context = new AudioContext();
             const worker = new Worker("./workers/pad.js");
             worker.postMessage({
                 action: "init",
-                value: {fftSize: padSize, sampleRate: context.sampleRate, frequencies: [380]}
+                value: {fftSize: padSize, sampleRate: context.sampleRate, frequencies: [440.0]}
             });
             worker.onmessage = event => {
                 const tables = event.data;
@@ -77,6 +96,13 @@
                 bufferSource.loop = true;
                 bufferSource.start(0.0, 0.0, 5.0);
                 bufferSource.connect(context.destination);
+                if (false) {
+                    const oscillator = context.createOscillator();
+                    oscillator.frequency.value = fundamentalFrequency;
+                    oscillator.start(context.currentTime);
+                    oscillator.stop(context.currentTime + 5.0);
+                    oscillator.connect(context.destination);
+                }
             };
             worker.postMessage({
                 action: "update",
